# Sigmapilot

./: .gitignore  README.md
.github/workflows/: industrial_ci_action.yml
autobotware_simulator/: CMakeLists.txt  package.xml
autobotware_simulator/config/: benwake_costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  velodyne_costmap_common_params.yaml
autobotware_simulator/launch/: autobotware_gazebo.launch  autobotware_rpi_replay.launch
autobotware_simulator/launch/control/: robot_control.launch
autobotware_simulator/launch/description/: robot_description.launch
autobotware_simulator/launch/navigation/: amcl.launch  move_base.launch  robot_navigation.launch
autobotware_simulator/launch/slam/: robot_gmapping.launch
autobotware_simulator/rviz/: autobotware_basic_config.rviz  autobotware_navigation.rviz
autobotware_simulator/urdf/benwake/: skid_steer_bot.gazebo  skid_steer_bot.xacro
autobotware_simulator/urdf/velodyne/: skid_steer_bot.gazebo  skid_steer_bot.xacro
feature_based_mapping/: CMakeLists.txt  README.md  package.xml
feature_based_mapping/include/feature_based_mapping/: dataContainers.hpp  fbm_icp.hpp
feature_based_mapping/launch/: fbm_icp.launch
feature_based_mapping/rviz/: fbm_icp.rviz
feature_based_mapping/src/: fbm_icp.cpp
gazebo_ros_lidar_plugin/: CMakeLists.txt  README.md  package.xml
gazebo_ros_lidar_plugin/SDF_config_example/: benwake_CE30D.md  velodyne16.md
gazebo_ros_lidar_plugin/include/gazebo_ros_lidar_plugin/: custom_lidar.h  dataContainers.h  gazebo_ros_lidar_plugin.h
gazebo_ros_lidar_plugin/src/: custom_lidar.cpp  gazebo_ros_lidar_plugin.cpp
gazebo_simulator/: CMakeLists.txt  package.xml
gazebo_simulator/config/: gmapping_params.yaml  robot_control.yaml
gazebo_simulator/launch/: modulidar_gazebo.launch  modulidar_rpi_replay.launch  sigmapilot_gazebo.launch  sigmapilot_rpi_replay.launch
gazebo_simulator/launch/control/: robot_control.launch
gazebo_simulator/launch/description/: robot_description.launch
gazebo_simulator/launch/navigation/: move_base.launch  robot_navigation.launch
gazebo_simulator/launch/slam/: robot_gmapping.launch
gazebo_simulator/maps/: iscas_map.pgm  iscas_map.yaml  mymap_cave.pgm  mymap_cave.yaml
gazebo_simulator/urdf/benwake/: skid_steer_bot.gazebo  skid_steer_bot.xacro
gazebo_simulator/urdf/velodyne/: skid_steer_bot.gazebo  skid_steer_bot.xacro
gazebo_simulator/worlds/: 50m_long_mine_world.world  benchmarking.world  iscas_museum.world  mine_world.world  mine_world_notworking.world
laser_scans_fusion/: CMakeLists.txt  README.md  package.xml
laser_scans_fusion/include/laser_scans_fusion/: dataContainers.hpp  laser_scans_fusion.hpp  scan_fusion.hpp
laser_scans_fusion/launch/: multi_scan_fusion.launch
laser_scans_fusion/src/: laser_scans_fusion.cpp  scan_fusion.cpp
point_cloud_assembler/: CMakeLists.txt  package.xml
point_cloud_assembler/include/point_cloud_assembler/: dataContainers.hpp  point_cloud_assembler.hpp
point_cloud_assembler/launch/: assembler_node.launch
point_cloud_assembler/rviz/: pointcloud_assembler.rviz
point_cloud_assembler/src/: point_cloud_assembler.cpp
sgm_lidar_clustering/: CMakeLists.txt  README.md  package.xml
sgm_lidar_clustering/include/sgm_lidar_clustering/: dataContainers.hpp  ground_segmentation.hpp  sgm_lidar_clustering.hpp  sgm_segmentation.hpp
sgm_lidar_clustering/launch/: Cluster_node.launch  gtest.test  multi_node_benwake.launch
sgm_lidar_clustering/nodes/: sgm_lidar_clustering.cpp
sgm_lidar_clustering/rviz/: Lidar.rviz  clustering.rviz  clustering_rpi.rviz  multi_LiDAR.rviz  multi_sensorclustering.rviz  multi_sensorclustering_rpi.rviz
sgm_lidar_clustering/src/: ground_segmentation.cpp  sgm_lidar_clustering.cpp  sgm_segmentation.cpp
sgm_lidar_clustering/tests/: sgm_unittests.cpp
