<?xml version="1.0"?>
<package format="2">
  <name>autobotware_simulator</name>
  <version>0.1.0</version>
  <description>The autobotware_simulator package</description>

  <maintainer email="khalid.elmadawi@robotion.ai">khalid</maintainer>
  
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
