<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_lidar_plugin</name>
  <version>0.1.0</version>
  <description>The gazebo_ros_lidar_plugin package</description>

  <maintainer email="khalid.elmadawi@sigma.se">khalid</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>libgazebo11-dev </build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>libgazebo11-dev</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
  </export>
</package>
