<?xml version="1.0"?>
<package format="2">
  <name>sgm_lidar_clustering</name>
  <version>0.1.0</version>
  <description>The sgm_lidar_clustering package</description>

  <maintainer email="khalid.elmadawi@robotion.ai">khalid</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <build_depend>nodelet</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>polled_camera</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>polled_camera</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
